# Hack-Princeton

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  README.md  WORKTREE_PLAN.md  alembic.ini  pyproject.toml  suppl_ai_PRD.md
.github/workflows/: ci.yml
backend/agents/: base.py
backend/api/: _approval.py  _pagination.py  deps.py  main.py  ws.py
backend/db/: __init__.py  bus.py  models.py  session.py
backend/llm/: __init__.py  cache_loader.py  client.py  prompt_cache.py  prompt_cache.sqlite.seed  tavily_cache.sqlite.seed
backend/observability/: logging.py
backend/schemas/: __init__.py  analytics.py  approval.py  disruption.py  impact.py  mitigation.py  route.py  signal.py
backend/scripts/: seed.py  seed_helpers.py  seed_history.py  seed_scenario.py
backend/tests/: conftest.py  test_agent_base.py  test_analyst_main.py  test_analyst_tools.py  test_approval_atomicity.py  test_bus.py  test_cache_loader.py  test_dedupe.py  test_drafts.py  test_fallback.py  test_fusion.py  test_impact.py  test_llm_client.py  test_no_smtp.py  test_offline_mode.py  test_openclaw_actions.py  test_options.py  test_prompt_cache.py  test_routes.py  test_scenarios.py  test_schemas.py  test_scout_main.py  test_seed.py  test_severity.py  test_sql_guard.py  test_strategist_main.py  test_tavily.py  test_tavily_pipeline.py  (+3 more)
docs/: demo-script.md  runbook.md
infra/: README.md  provision.py
scripts/: bootstrap_cache.py  prime_cache.py  restart_persistence_test.py  simulate.py  smoke.py
web/: .env.example  package.json  playwright.config.ts  pnpm-lock.yaml
(+137 files in other folders)
